# filez

./: Cargo.toml  LICENSE.md  README.md
src/: error_handlers.rs  favicon.rs  filez.rs  main.rs
static/favicon/: font-license.txt  site.webmanifest
templates/: files.html
