[package]
name = "filez"
version = "0.1.0"
authors = ["Alex W <alexfromapex@gmail.com>"]
edition = "2018"

# More info: https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = "0.4.6"
rocket-include-static-resources = "0.9.5"
askama = { version = "0.10", default-features = false, features = ["with-rocket", "mime", "mime_guess"] }
askama_rocket = "0.10.0"
chrono = "0.4.19"