[package]
name = "filez"
version = "0.1.0"
authors = ["Alex W <alexfromapex@gmail.com>"]
edition = "2021"

# More info: https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket-include-static-resources = "0.10.1"
askama = { git = "https://github.com/djc/askama.git", rev = "8142963", default-features = false, features = ["with-rocket", "mime", "mime_guess"] }
askama_rocket = { git = "https://github.com/djc/askama.git", rev = "8142963" }
chrono = "0.4.19"